--- a/chatapp-frontend/public/index.html
+++ b/chatapp-frontend/public/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Chat created using react-app" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="icon" href="chatapp-frontend/public/favicon.ico" />
+  <link rel="apple-touch-icon" href="chatapp-frontend/public/logo192.png" />
+  <link rel="manifest" href="chatapp-frontend/public/manifest.json" />
 
   <title>GuffGaff Hub - Realtime Chat App</title>
 </head>
