--- a/chatapp-frontend/public/index.html
+++ b/chatapp-frontend/public/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="chatapp-frontend/public/logo192.png" />
   <link rel="manifest" href="chatapp-frontend/public/manifest.json" />
 
-  <title>GuffGaff Hub - Realtime Chat App</title>
+  <title>Guff Gaff Hub</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
